fixed: curriculum form alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,7 +69,7 @@
 
 @layer components {
   .wrapper {
-    @apply flex flex-col px-4 justify-center w-full
+    @apply flex flex-col px-4 justify-center mx-auto
   }
 }
 
